# PiPlanter

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  new.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py
.bin/: commands  rsync  setup  setup-prod  spi  test  tests  validate
.github/workflows/: python.yml
docs/: README.md  conf.py  notes.md  pytest.md  requirements.md
docs/_src/: gardner.rst  index.rst
piplanter/: __init__.py  constants.py  enums.py  helpers.py  humidity_temp.py  light.py  logger.py  moisture.py  water.py
piplanter/devices/: base_device.py  heater.py  humidifer.py  light.py  water_pump.py
piplanter/environment/: base_environment.py  humidity.py  light.py  soil_moisture.py  temperature.py
piplanter/flowers/: base_flower.py  orchid.py  pineapple.py
piplanter/sensors/: __init__.py  base_sensor.py  humidity.py  light.py  soil_moisture.py  (+1 more)
pyplanter/: __init__.py  collection.py  constants.py  enums.py  helpers.py  humidity_temp.py  light.py  logger.py  moisture.py  runner.py  temp_and_humidity.py  water.py
samples/: blink.py  button.py  moisture.py  runner.py  temperature.py
tests/: test_devices_heater.py  test_devices_humidifier.py  test_devices_init.py  test_devices_water_pump.py  test_helpers.py  test_lib_light.py  test_lib_temperature.py  test_logger.py  test_plants_base_plant.py  test_plants_init.py  test_plants_orchid.py  test_plants_pineapple.py  test_sensors_air_sensor.py  test_sensors_init.py  test_sensors_soil_moisture_sensor.py
(+33 files in other folders)
