
[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-ra -s"
log_cli = true
testpaths = [
    "tests",
]
addopts = "-ra -s --ignore-glob=tests/test_sensors_*.py"

[tool.black]
line-length = 80
extend-ignore = ['E203', 'W503']
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
    | samples
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["setuptools>=47.1.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"
